etc/iptables/ip6tables.rules
# Generated by ip6tables-save v1.8.8 on Fri Jul 29 07:57:10 2022
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Fri Jul 29 07:57:10 2022
# Generated by ip6tables-save v1.8.8 on Fri Jul 29 07:57:10 2022
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A PREROUTING -m rpfilter -j ACCEPT
-A PREROUTING -j DROP
COMMIT
# Completed on Fri Jul 29 07:57:10 2022
# Generated by ip6tables-save v1.8.8 on Fri Jul 29 07:57:10 2022
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Fri Jul 29 07:57:10 2022
# Generated by ip6tables-save v1.8.8 on Fri Jul 29 07:57:10 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Fri Jul 29 07:57:10 2022
# Generated by ip6tables-save v1.8.8 on Fri Jul 29 07:57:10 2022
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p udp -m udp --sport 5353 --dport 5353 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 9100 -j ACCEPT
-A INPUT -p udp -m udp --sport 9100 -j ACCEPT
-A INPUT -p udp -m udp --dport 161 -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p tcp -m recent --set --name TCP-PORTSCAN --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j REJECT --reject-with tcp-reset
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j REJECT --reject-with icmp6-adm-prohibited
-A INPUT -j REJECT --reject-with icmp6-adm-prohibited
-A TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j REJECT --reject-with tcp-reset
-A UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN --mask ffff:ffff:ffff:ffff:ffff:ffff:ffff:ffff --rsource -j REJECT --reject-with icmp6-adm-prohibited
COMMIT
# Completed on Fri Jul 29 07:57:10 2022
